--- a/styles.css
+++ b/styles.css
@@ -55,10 +55,10 @@ ul li a
 #profile{
     opacity:0.5;
 }
-#profile h6{
+h6{
     color: white;
     opacity: 1;
 }
-#div > img{
+img{
     opacity: 1;
 }
