--- a/styles.css
+++ b/styles.css
@@ -67,9 +67,11 @@ img{
     opacity: 1;
 }
 
+Table{
+    width: 500px;
+    height: 600px;
+}
 Table, td, tr, th{
     border: 2px solid black;
     border-collapse: collapse;
-    width: 500px;
-    height: 600px;
 }
