--- a/styles.css
+++ b/styles.css
@@ -69,9 +69,10 @@ img{
 
 Table{
     width: 500px;
-    height: 600px;
+    height: 500px;
 }
 Table, td, tr, th{
     border: 2px solid black;
     border-collapse: collapse;
+    text-align: center;
 }
