--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,9 @@ img{
 Table{
     width: 500px;
     height: 500px;
+    position: static;
+    top: 25%;
+    left: 200px;
 }
 Table, td, tr, th{
     border: 2px solid black;
