--- a/styles.css
+++ b/styles.css
@@ -70,12 +70,14 @@ img{
 Table{
     width: 500px;
     height: 500px;
-    position: static;
-    top: 25%;
-    left: 200px;
+    position: absolute;
+    top: 10%;
+    left: 300px;
 }
 Table, td, tr, th{
     border: 2px solid black;
     border-collapse: collapse;
     text-align: center;
+    background-color: wheat;
+    color: aquamarine
 }
