--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body, html
     height: 100%;
 }
 .bg{
-    background-image: url(IMG-20221013-WA0007.jpg);
+    background-image: url(IMG-20221014-WA0003[1].jpg);
     height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
