--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ Table, td, tr, th{
     border: 2px solid black;
     border-collapse: collapse;
     text-align: center;
-    background-color: wheat;
+    background-color: rgba(255, 9, 30, 0.473);
     color: blue;
     font-size: 25px;
 }
