--- a/styles.css
+++ b/styles.css
@@ -10,18 +10,18 @@ body, html
     opacity: 1;
 }
 h2{
-    color: blue;
+    color: black;
     opacity: 1;
 }
 h3
 {
-    color: blue;
+    color: black;
     opacity: 1;
 }
 
 div
 {
-    background-color: black;
+    background-color: royalblue;
     padding: 4px;
     margin: 20px;
     font-family: Arial, Verdana, Times New Roman;
@@ -35,7 +35,7 @@ ul
     width: 250px;
     top: 90px;
     left: 20px;
-    color: blue;
+    color: black;
     background-color: aqua;
     margin: 10px;
     padding: 6px;
@@ -52,7 +52,7 @@ ul li
 }
 ul li a
 {
-    color: blue;
+    color: black;
     opacity: 1;
     font-size: 30px;
 }
@@ -60,7 +60,7 @@ ul li a
     opacity:0.5;
 }
 h6, h5{
-    color: blue;
+    color: black;
     opacity: 1;
 }
 img{
@@ -74,14 +74,14 @@ Table{
     top: 10%;
     left: 200px;
     opacity: 0.5;
-    color: blue;
+    color: black;
 }
 Table, td, tr, th{
     border: 2px solid black;
     border-collapse: collapse;
     text-align: center;
-    background-color: rgb(255, 102, 0);
-    color: blue;
+    background-color: royalblue;
+    color: black;
     font-size: 25px;
 }
 h1{
