--- a/styles.css
+++ b/styles.css
@@ -69,14 +69,13 @@ img{
 }
 
 Table{
-    width: 700px;
-    height: 700px;
     position: absolute;
-    top: 10%;
-    left: 200px;
+    top: 20%;
     opacity: 0.5;
     color: black;
-    margin: 20px;
+    margin-right: 15%;
+    margin-left: 15%;
+    width: 70%;
 }
 Table, td, tr, th{
     border: 2px solid black;
