--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ h1{
 }
 
 #main{
-    font-family: fantasy;
+    font-family: cursive;
 }
 @import url('https://fonts.googleapis.com/css?family=Lobster&display=swap') repeat scroll 0 0 rgba(0, 0, 0 , 0);
 
