--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,7 @@ h1{
 
 #main{
     font-family: cursive;
+    font-weight: bolder;
 }
 @import url('https://fonts.googleapis.com/css?family=Lobster&display=swap') repeat scroll 0 0 rgba(0, 0, 0 , 0);
 
