--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ img{
 
 Table{
     position: absolute;
-    top: 20%;
+    top: 30%;
     opacity: 0.5;
     color: black;
     margin-right: 15%;
@@ -84,6 +84,7 @@ Table, td, tr, th{
     background-color: lightskyblue;
     color: black;
     font-size: 30px;
+    height: 50px;
 }
 h1{
     text-align: center;
@@ -94,6 +95,7 @@ h1{
     color: black;
     font-size: larger;
     padding: 10px;
+    border-radius: 20px;
 }
 
 .title{
