--- a/styles.css
+++ b/styles.css
@@ -150,3 +150,26 @@ body {
     animation: scroll 200s linear infinite;
   }
 }
+
+#links{
+    background-color: aliceblue;
+    opacity: 0.75;
+    display: block;
+    width: 30%;
+    margin-right: auto;
+    margin-left: auto;
+    list-style: none;
+    border-radius: 10px;
+}
+
+#links li{
+    display: inline;
+}
+
+#links li a{
+    background-color: aquamarine;
+    margin: 20px;
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
+}
