--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body, html
     height: 100%;
 }
 .bg{
-    background-image: url(images/IMG-20221014-WA0003[1].jpg);
+    background-image: url(images/IMG-20221110-WA0006.jpg;
     height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
