--- a/styles.css
+++ b/styles.css
@@ -145,6 +145,16 @@ h1{
     height: 20px;
 }
 
+.visual{
+    background-color: white;
+    display: block;
+    border: 10px solid white;
+    border-radius: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
 body {
   background: #fff;
 }
