--- a/styles.css
+++ b/styles.css
@@ -148,8 +148,8 @@ h1{
 .visual{
     background-color: white;
     display: block;
-    border: 10px solid white;
     border-radius: 20px;
+    border: 2px solid black;
     margin-left: auto;
     margin-right: auto;
 }
